--- a/KusekNataliaCV.adoc
+++ b/KusekNataliaCV.adoc
@@ -9,7 +9,11 @@
 
 == Land Surveyor/GIS Technician
 
+Master of Science in Geodesy, Surveying and Cartography with 10 months experience in GIS and 3 years in land surveying.
 
+=== Availability
+
+2 weeks
 
 === Skills
 
@@ -29,22 +33,42 @@ Microsoft Excel, Microsoft Word,
 == Experience
 
 === GIS Technician (2015-11 - ), Cyient (Telecommunication), Aylesbury, United Kingdom
-* 
+
+Position type: contractor via agency
+
+    * Designing fibre network for BT. 
+
+
 
 Technologies: ArcGIS, Microsoft Excel, 
 
 === GIS Technician Intern (2014-11 - 2014-12), GISON (), Krakow, Poland
-* 
+
+Position type: permanent
+
+    * Creating metadata, digitalizing map data. 
+
+
 
 Technologies: QGIS, 
 
 === Land Surveyor Assistant (2011-11 - 2014-10), GEOMAP (Land surveying), Krakow, Poland
-* 
+
+Position type: part-time
+
+    * Real estate divisions, resumptions of border, maps updates. 
+
+
 
 Technologies: Microsoft Word, WinKalk, MikroMap, Ewmapa, 
 
 === Land Surveyor Assistant (2010-06 - 2010-08), GEOPROF (Land surveying), Krakow, Poland
-* 
+
+Position type: permanent
+
+    * Maps updates. 
+
+
 
 Technologies: Microstation, 
 
@@ -68,4 +92,8 @@ Python Data Structures (2015)
 === Other
 
 Currently learning ArcGIS and Python.
+
+=== Last updated
+
+14/06/16
 
