--- a/KusekNataliaCV.adoc
+++ b/KusekNataliaCV.adoc
@@ -3,7 +3,7 @@
 *Phone*: (44) 7990 486260 +
 *Email*: natalia-cv@kusek.info +
 *GitHub*:  +
-*LinkedIn*:  +
+*LinkedIn*: https://uk.linkedin.com/in/nataliakusek/en +
 *Website*: http://natalia.kusek.info +
 *Address*: Harpenden, UK
 
@@ -42,7 +42,7 @@ Position type: contractor via agency
 
 Technologies: ArcGIS, Microsoft Excel, 
 
-=== GIS Technician Intern (2014-11 - 2014-12), GISON (), Krakow, Poland
+=== GIS Technician Intern (2014-11 - 2014-12), GISON (GIS systems provider), Krakow, Poland
 
 Position type: permanent
 
