--- a/KusekNataliaCV.adoc
+++ b/KusekNataliaCV.adoc
@@ -7,7 +7,7 @@
 *Website*: http://natalia.kusek.info +
 *Address*: Harpenden, UK
 
-== Land Surveyor/GIS Technician
+== CAD/GIS Technician
 
 Master of Science in Geodesy, Surveying and Cartography with 1 year experience in GIS and 2 years in land surveying and CAD.
 
