--- a/KusekNataliaCV.adoc
+++ b/KusekNataliaCV.adoc
@@ -2,14 +2,14 @@
 
 *Phone*: (44) 7990 486260 +
 *Email*: natalia-cv@kusek.info +
-*GitHub*:  +
+*GitHub*: https://github.com/NataliaKusek +
 *LinkedIn*: https://uk.linkedin.com/in/nataliakusek/en +
 *Website*: http://natalia.kusek.info +
 *Address*: Harpenden, UK
 
-== CAD/GIS Technician
+== Junior Python Developer
 
-Master of Science in Geodesy, Surveying and Cartography with 1 year experience in GIS and 2 years in land surveying and CAD.
+Master of Science in Geodesy, Surveying and Cartography with 1 year experience in GIS and 2 years in land surveying and CAD. Learning Python and SQL.
 
 === Availability
 
@@ -19,6 +19,9 @@ now
 
 ==== Cad
 Ewmapa, MikroMap, Microstation, 
+
+==== Database
+PostgreSQL, 
 
 ==== Gis
 ArcGIS, QGIS, 
@@ -30,10 +33,23 @@ WinKalk,
 Microsoft Excel, Microsoft Word, 
 
 ==== Programming
-Python, 
+Python, SQL, 
+
+==== Tool
+Git, GitHub, 
 
 
 == Experience
+
+=== Junior Python Developer (2017-11 - ), Kusek Ltd (IT), Harpenden, United Kingdom
+
+Position type: ownership
+
+    * Learning Python and SQL. 
+
+
+
+Technologies: Python, Git, GitHub, SQL, PostgreSQL, Markdown, 
 
 === Director (2016-06 - ), Kusek Ltd (IT), Harpenden, United Kingdom
 
@@ -43,7 +59,7 @@ Position type: ownership
 
 
 
-Technologies: Python, xero.com, 
+Technologies: xero.com, 
 
 === GIS Technician (2015-11 - 2016-10), Cyient (Telecommunication), Aylesbury, United Kingdom
 
@@ -87,6 +103,9 @@ Technologies: Microstation,
 
 
 == Recommendations
+"Natalia is working fast and efficient and good result oriented, he´s opened to learn new things."
+Mariusz Krukar, October 8, 2016
+
 
 == Learning
 
@@ -108,5 +127,5 @@ Currently learning ArcGIS and Python.
 
 === Last updated
 
-8/19/17
+11/25/17
 
